src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>General Inquiry Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>O%26M Requests and Inquiries</fullName>
        <description>O&amp;M Inquiries</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <controllingField>Responding_Office__c</controllingField>
            <picklistValues>
                <fullName>System Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter-Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location-Based Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Safety Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mission Critical Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMR to LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prizes and Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Orders (Standard Reference Materials)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer and IT Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIST Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibration Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scientific and Technical Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standards Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsNISTPublication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNISTPublication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_of_Capture__c</fullName>
        <label>Location of Capture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multi_Select_Text__c</fullName>
        <label>Multi Select Text</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIST_Office_Email__c</fullName>
        <formula>IF (ISPICKVAL(Responding_Office__c, &quot;ITL - NCCOE&quot;),&quot;NCCOE@nist.gov&quot;, 
IF(ISPICKVAL(Responding_Office__c, &quot;ITL - CSD&quot;),&quot;webmaster-csrc@nist.gov&quot;, 
IF(ISPICKVAL(Responding_Office__c, &quot;ITL - NSTIC&quot;),&quot;NSTIC@NIST.GOV&quot;, 
IF(ISPICKVAL(Responding_Office__c, &quot;ITL&quot;),&quot;itl_inquiries@nist.gov&quot;, 
IF(ISPICKVAL(Responding_Office__c, &quot;ITL - NICE&quot;),&quot;nice.nist@nist.gov&quot;,NULL)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NIST Office Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIST_Office_Phone__c</fullName>
        <formula>IF (ISPICKVAL(Responding_Office__c, &quot;ITL - NCCOE&quot;),&quot;(301)975-0200&quot;, 
IF(ISPICKVAL(Responding_Office__c, &quot;ITL - CSD&quot;),&quot;(301)975-8443&quot;, 
IF(ISPICKVAL(Responding_Office__c, &quot;ITL - NSTIC&quot;),&quot;(202)482-0935&quot;, 
IF(ISPICKVAL(Responding_Office__c, &quot;ITL&quot;),&quot;(301) 975-2901 &quot;, 
IF(ISPICKVAL(Responding_Office__c, &quot;ITL - NICE&quot;),&quot;(301)975-5048&quot;,NULL
)))))</formula>
        <label>NIST Office Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIST_Response__c</fullName>
        <label>NIST Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NIST_Submitter__c</fullName>
        <label>NIST Submitter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Case_Type_Reason__c</fullName>
        <description>Description on why &quot;Other&quot; is selected as the Case Type.</description>
        <label>Other Case Type Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Re_assigned_To__c</fullName>
        <description>Who the inquiry was reassigned to</description>
        <label>Re-assigned To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responding_Office__c</fullName>
        <description>Office to direct the request.</description>
        <inlineHelpText>Office to direct the request.</inlineHelpText>
        <label>Responding Office</label>
        <picklist>
            <picklistValues>
                <fullName>CTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - PSCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - NASCTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - RFTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - WND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - NCCOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - NICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - NSTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - CSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OWM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Share_Case_With__c</fullName>
        <label>Share Case With</label>
        <picklist>
            <picklistValues>
                <fullName>EL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - NCCOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - NICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - NSTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - CSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - PSCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - NASCTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - RFTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - WND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADIIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMNPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baldrige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCNR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OWM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>US States</description>
        <globalPicklist>State</globalPicklist>
        <inlineHelpText>State the inquiry originated from.</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Origin__c</fullName>
        <description>Sub origin of the Case Origin field.</description>
        <label>Sub Origin</label>
        <picklist>
            <picklistValues>
                <fullName>NIST Contact-Us Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPO@nist.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPP@nist.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBIR@nist.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>interagency@nist.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSDRFFO@nist.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSDCRADA@nist.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSDRNews@nist.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce@nist.gov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Email</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Admin_Queue_CSD_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NIST_Submitter__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <label>Admin Queue CSD</label>
        <queue>Admin_Queue_CSD</queue>
    </listViews>
    <listViews>
        <fullName>Admin_Queue_ITL_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NIST_Submitter__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <label>Admin Queue ITL</label>
        <queue>Admin_Queue_ITL</queue>
    </listViews>
    <listViews>
        <fullName>Admin_Queue_NCCOE_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NIST_Submitter__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <label>Admin Queue NCCOE</label>
        <queue>Admin_Queue_NCCOE</queue>
    </listViews>
    <listViews>
        <fullName>Admin_Queue_NICE_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NIST_Submitter__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <label>Admin Queue NICE</label>
        <queue>Admin_Queue_NICE</queue>
    </listViews>
    <listViews>
        <fullName>Admin_Queue_NSTIC_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NIST_Submitter__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <label>Admin Queue NSTIC</label>
        <queue>Admin_Queue_NSTIC</queue>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NIST_Submitter__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NIST_Submitter__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>ITL_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ITL Queue</label>
        <queue>ITL_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MEP_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>MEP Queue</label>
        <queue>MEP_Queue</queue>
        <sharedTo>
            <group>MEP_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Management_Queue_CSD_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NIST_Submitter__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <label>Management Queue CSD</label>
        <queue>Management_Queue_CSD</queue>
    </listViews>
    <listViews>
        <fullName>Management_Queue_ITL_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NIST_Submitter__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <label>Management Queue ITL</label>
        <queue>Management_Queue_ITL</queue>
    </listViews>
    <listViews>
        <fullName>Management_Queue_NCCOE_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NIST_Submitter__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <label>Management Queue NCCOE</label>
        <queue>Management_Queue_NCCOE</queue>
    </listViews>
    <listViews>
        <fullName>Management_Queue_NICE_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NIST_Submitter__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <label>Management Queue NICE</label>
        <queue>Management_Queue_NICE</queue>
    </listViews>
    <listViews>
        <fullName>Management_Queue_NSTIC_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NIST_Submitter__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
        </filters>
        <label>Management Queue NSTIC</label>
        <queue>Management_Queue_NSTIC</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>NIST_Submitter__c</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <recordTypes>
        <fullName>General_Inquiries</fullName>
        <active>true</active>
        <businessProcess>General Inquiry Management</businessProcess>
        <label>General Inquiries</label>
    </recordTypes>
    <recordTypes>
        <fullName>O_M_Inquiries</fullName>
        <active>true</active>
        <businessProcess>O%26M Requests and Inquiries</businessProcess>
        <label>O&amp;M Inquiries</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Inquiry_ReAssigned_To</fullName>
        <active>true</active>
        <description>The Re-assigned To? text fields is required when the Case Reason is Inquiry Re-Assigned.</description>
        <errorConditionFormula>IF(
AND(
TEXT(   Reason  ) = &quot;Inquiry Re-assigned&quot;, 
LEN(  Re_assigned_To__c  ) = 0), True, False)</errorConditionFormula>
        <errorMessage>You must enter who the inquiry has been re-assigned to.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Case_Type_Reason</fullName>
        <active>true</active>
        <description>Other Case Type Reason field is only required if &quot;Other&quot; is selected as the Case Type.</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL( Origin , &quot;Web&quot;)),   
(TEXT(  Case_Type__c  ) = &quot;Other&quot;), 
(LEN( Other_Case_Type_Reason__c ) = 0))</errorConditionFormula>
        <errorDisplayField>Other_Case_Type_Reason__c</errorDisplayField>
        <errorMessage>You must enter a reason why &quot;Other&quot; was selected.</errorMessage>
    </validationRules>
</CustomObject>